improve blog readability and fix image on 8 survey blog

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 /* inter-300 - latin */
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-style: normal;
   font-weight: 300;
   src: url('~assets/fonts/inter-v8-latin-300.eot'); /* IE9 Compat Modes */
@@ -14,6 +15,7 @@
 /* inter-regular - latin */
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-style: normal;
   font-weight: 400;
   src: url('~assets/fonts/inter-v8-latin-regular.eot'); /* IE9 Compat Modes */
@@ -27,6 +29,7 @@
 /* inter-500 - latin */
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-style: normal;
   font-weight: 500;
   src: url('~assets/fonts/inter-v8-latin-500.eot'); /* IE9 Compat Modes */
@@ -40,6 +43,7 @@
 /* inter-600 - latin */
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-style: normal;
   font-weight: 600;
   src: url('~assets/fonts/inter-v8-latin-600.eot'); /* IE9 Compat Modes */
@@ -53,6 +57,7 @@
 /* inter-700 - latin */
 @font-face {
   font-family: 'Inter';
+  font-display: swap;
   font-style: normal;
   font-weight: 700;
   src: url('~assets/fonts/inter-v8-latin-700.eot'); /* IE9 Compat Modes */
